# public/swagger/swagger.yaml
@@ -14,8 +14,8 @@ tags:
     description: "Everything about authentication on API"
   - name: "Agency"
     description: "Everything about agency informations"
-  - name: "user"
-    description: "Operations about user"
+  - name: "Users"
+    description: "Operations about user. Only admin user can access this routes!"
 paths:
   /register:
     post:
@@ -84,12 +84,12 @@ paths:
           type: "string"
 
       responses:
-        "400":
-          description: "Invalid inputs."
-        "500":
-          description: "An error has occurred. Check the return message and error logs."
         "201":
           description: "Success! An e-mail was sent to the registered address with the user generated password."
+        "400":
+          description: "Invalid input."
+        "500":
+          description: "An error has occurred. Check the return message and error response or error logs."
 
   /login:
     post:
@@ -293,7 +293,7 @@ paths:
     get:
       tags:
         - "Agency"
-      summary: "Get agency user"
+      summary: "Get user agency"
       description: ""
       operationId: "agency"
       produces:
@@ -317,7 +317,7 @@ paths:
       tags:
         - "Agency"
       summary: "Update agency informations"
-      description: ""
+      description: "Only admin user can access this route!"
       operationId: "agencyUpdate"
       consumes:
         - "application/x-www-form-urlencoded"
@@ -373,6 +373,179 @@ paths:
           description: "Invalid input."
         "500":
           description: "The agency could not be updated."
+
+
+  /users:
+    get:
+      tags:
+        - "Users"
+      summary: "Get agency users"
+      description: ""
+      operationId: "users"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "Access token"
+          required: true
+          type: "string"
+          format: "Bearer JWT token"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/User"
+
+    post:
+      tags:
+        - "Users"
+      summary: "Creates a new user for the agency"
+      description: "If the password field is not passed, a random password is generated and sent to the user's registration email."
+      operationId: "userCreate"
+      consumes:
+        - "application/x-www-form-urlencoded"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "Access token"
+          required: true
+          type: "string"
+          format: "Bearer JWT token"
+
+        - name: "name"
+          in: "formData"
+          type: "string"
+          description: "Full username"
+          required: true
+
+        - name: "email"
+          in: "formData"
+          type: "string"
+          description: "User e-mail address"
+          required: true
+
+        - name: "type_id"
+          in: "formData"
+          type: "integer"
+          description: "User type (1-Adminstrator / 2-Driver)"
+          required: true
+
+        - name: "password"
+          in: "formData"
+          type: "string"
+          description: "User password"
+
+        - name: "password_confirmation"
+          in: "formData"
+          type: "string"
+          description: "User password confirmation"
+
+      responses:
+        "201":
+          description: "Success! An e-mail was sent to the registered address with the user generated password."
+        "400":
+          description: "Invalid input."
+        "500":
+          description: "An error has occurred. Check the return message and error response or error logs."
+
+  /users/{userId}:
+    put:
+      tags:
+        - "Users"
+      summary: "Updates a specific agency user"
+      description: "If the password field is not passed, a random password is generated and sent to the user's registration email."
+      operationId: "userUpdate"
+      consumes:
+        - "application/x-www-form-urlencoded"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "Access token"
+          required: true
+          type: "string"
+          format: "Bearer JWT token"
+
+        - name: "userId"
+          in: "path"
+          description: "ID of specific user"
+          required: true
+          type: "integer"
+          format: "int64"
+
+        - name: "name"
+          in: "formData"
+          type: "string"
+          description: "Full username"
+
+        - name: "email"
+          in: "formData"
+          type: "string"
+          description: "User e-mail address"
+
+        - name: "type_id"
+          in: "formData"
+          type: "integer"
+          description: "User type (1-Adminstrator / 2-Driver)"
+
+        - name: "password"
+          in: "formData"
+          type: "string"
+          description: "User password"
+
+        - name: "password_confirmation"
+          in: "formData"
+          type: "string"
+          description: "User password confirmation"
+
+      responses:
+        "200":
+          description: "Successful operation."
+        "400":
+          description: "Invalid input."
+        "404":
+          description: "User not found."
+        "500":
+          description: "An error has occurred. Check the return message and error response or error logs."
+
+    delete:
+      tags:
+        - "Users"
+      summary: "Deletes a specific agency user"
+      description: ""
+      operationId: "deleteUser"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "Access token"
+          required: true
+          type: "string"
+          format: "Bearer JWT token"
+
+        - name: "userId"
+          in: "path"
+          description: "ID of specific user"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "Successful operation."
+        "403":
+          description: "You cannot delete yourself."
+        "404":
+          description: "User not found."
+        "500":
+          description: "An error has occurred. Check the return message and error response or error logs."
 
   /pet/findByStatus:
     get:
@@ -667,179 +840,8 @@ paths:
           description: "Invalid ID supplied"
         "404":
           description: "Order not found"
-  /user:
-    post:
-      tags:
-        - "user"
-      summary: "Create user"
-      description: "This can only be done by the logged in user."
-      operationId: "createUser"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Created user object"
-          required: true
-          schema:
-            $ref: "#/definitions/User"
-      responses:
-        default:
-          description: "successful operation"
-  /user/createWithArray:
-    post:
-      tags:
-        - "user"
-      summary: "Creates list of users with given input array"
-      description: ""
-      operationId: "createUsersWithArrayInput"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "List of user object"
-          required: true
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/User"
-      responses:
-        default:
-          description: "successful operation"
-  /user/createWithList:
-    post:
-      tags:
-        - "user"
-      summary: "Creates list of users with given input array"
-      description: ""
-      operationId: "createUsersWithListInput"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "List of user object"
-          required: true
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/User"
-      responses:
-        default:
-          description: "successful operation"
-  /user/login:
-    get:
-      tags:
-        - "user"
-      summary: "Logs user into the system"
-      description: ""
-      operationId: "loginUser"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "username"
-          in: "query"
-          description: "The user name for login"
-          required: true
-          type: "string"
-        - name: "password"
-          in: "query"
-          description: "The password for login in clear text"
-          required: true
-          type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            type: "string"
-          headers:
-            X-Rate-Limit:
-              type: "integer"
-              format: "int32"
-              description: "calls per hour allowed by the user"
-            X-Expires-After:
-              type: "string"
-              format: "date-time"
-              description: "date in UTC when token expires"
-        "400":
-          description: "Invalid username/password supplied"
 
-  /user/{username}:
-    get:
-      tags:
-        - "user"
-      summary: "Get user by user name"
-      description: ""
-      operationId: "getUserByName"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "username"
-          in: "path"
-          description: "The name that needs to be fetched. Use user1 for testing. "
-          required: true
-          type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/User"
-        "400":
-          description: "Invalid username supplied"
-        "404":
-          description: "User not found"
-    put:
-      tags:
-        - "user"
-      summary: "Updated user"
-      description: "This can only be done by the logged in user."
-      operationId: "updateUser"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "username"
-          in: "path"
-          description: "name that need to be updated"
-          required: true
-          type: "string"
-        - in: "body"
-          name: "body"
-          description: "Updated user object"
-          required: true
-          schema:
-            $ref: "#/definitions/User"
-      responses:
-        "400":
-          description: "Invalid user supplied"
-        "404":
-          description: "User not found"
-    delete:
-      tags:
-        - "user"
-      summary: "Delete user"
-      description: "This can only be done by the logged in user."
-      operationId: "deleteUser"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "username"
-          in: "path"
-          description: "The name that needs to be deleted"
-          required: true
-          type: "string"
-      responses:
-        "400":
-          description: "Invalid username supplied"
-        "404":
-          description: "User not found"
+
 securityDefinitions:
   petstore_auth:
     type: "oauth2"
